<resources>
    <string name="app_name">Lab4-Calculator</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="cero">0</string>
    <string name="punto"><![CDATA[.]]></string>
    <string name="igual"><![CDATA[=]]></string>
    <string name="backspace"><![CDATA[<x|]]></string>
    <string name="mas"><![CDATA[+]]></string>
    <string name="menos"><![CDATA[-]]></string>
    <string name="por"><![CDATA[*]]></string>
    <string name="entre"><![CDATA[/]]></string>
    <string name="Ce">C</string>
</resources>