<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvPantalla"
        android:layout_width="301dp"
        android:layout_height="59dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="63dp"
        android:text="Calculadora"
        android:textAlignment="textEnd"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMenos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPor"
        android:layout_width="77dp"
        android:layout_height="83dp"
        android:layout_marginEnd="15dp"
        android:text="@string/por"
        app:layout_constraintEnd_toStartOf="@+id/btnMas"
        app:layout_constraintTop_toTopOf="@+id/btnMas" />

    <Button
        android:id="@+id/btnMenos"
        android:layout_width="77dp"
        android:layout_height="83dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="22dp"
        android:text="@string/menos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEntre"
        android:layout_width="77dp"
        android:layout_height="83dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:text="@string/entre"
        app:layout_constraintEnd_toStartOf="@+id/btnPor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnPor" />

    <Button
        android:id="@+id/btnMas"
        android:layout_width="77dp"
        android:layout_height="83dp"
        android:layout_marginEnd="15dp"
        android:text="@string/mas"
        app:layout_constraintEnd_toStartOf="@+id/btnMenos"
        app:layout_constraintTop_toTopOf="@+id/btnMenos" />

    <Button
        android:id="@+id/btnSiete"
        android:layout_width="77dp"
        android:layout_height="83dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/siete"
        app:layout_constraintEnd_toStartOf="@+id/btnOcho"
        app:layout_constraintTop_toBottomOf="@+id/btnEntre" />

    <Button
        android:id="@+id/btnOcho"
        android:layout_width="77dp"
        android:layout_height="83dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/ocho"
        app:layout_constraintEnd_toStartOf="@+id/btnNueve"
        app:layout_constraintTop_toBottomOf="@+id/btnPor" />

    <Button
        android:id="@+id/btnNueve"
        android:layout_width="77dp"
        android:layout_height="83dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nueve"
        app:layout_constraintEnd_toStartOf="@+id/btnClear"
        app:layout_constraintTop_toBottomOf="@+id/btnMas" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="77dp"
        android:layout_height="83dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="22dp"
        android:text="@string/Ce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMenos" />

    <Button
        android:id="@+id/btnCuatro"
        android:layout_width="77dp"
        android:layout_height="83dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/cuatro"
        app:layout_constraintEnd_toStartOf="@+id/btnCinco"
        app:layout_constraintTop_toBottomOf="@+id/btnSiete" />

    <Button
        android:id="@+id/btnCinco"
        android:layout_width="77dp"
        android:layout_height="83dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="12dp"
        android:text="@string/cinco"
        app:layout_constraintEnd_toStartOf="@+id/btnSeis"
        app:layout_constraintTop_toBottomOf="@+id/btnOcho" />

    <Button
        android:id="@+id/btnSeis"
        android:layout_width="77dp"
        android:layout_height="83dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:text="@string/seis"
        app:layout_constraintEnd_toStartOf="@+id/btnBackspace"
        app:layout_constraintTop_toBottomOf="@+id/btnNueve" />

    <Button
        android:id="@+id/btnBackspace"
        android:layout_width="77dp"
        android:layout_height="83dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="22dp"
        android:text="@string/backspace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClear" />

    <Button
        android:id="@+id/btnUno"
        android:layout_width="77dp"
        android:layout_height="83dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/uno"
        app:layout_constraintEnd_toStartOf="@+id/btnDos"
        app:layout_constraintTop_toBottomOf="@+id/btnCuatro" />

    <Button
        android:id="@+id/btnDos"
        android:layout_width="77dp"
        android:layout_height="83dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/dos"
        app:layout_constraintEnd_toStartOf="@+id/btnTres"
        app:layout_constraintTop_toBottomOf="@+id/btnCinco" />

    <Button
        android:id="@+id/btnTres"
        android:layout_width="77dp"
        android:layout_height="83dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/tres"
        app:layout_constraintEnd_toStartOf="@+id/btnIgual"
        app:layout_constraintTop_toBottomOf="@+id/btnSeis" />

    <Button
        android:id="@+id/btnIgual"
        android:layout_width="77dp"
        android:layout_height="185dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="22dp"
        android:text="@string/igual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBackspace" />

    <Button
        android:id="@+id/btnCero"
        android:layout_width="169dp"
        android:layout_height="83dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/cero"
        app:layout_constraintEnd_toStartOf="@+id/btnPunto"
        app:layout_constraintTop_toBottomOf="@+id/btnDos" />

    <Button
        android:id="@+id/btnPunto"
        android:layout_width="77dp"
        android:layout_height="83dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/punto"
        app:layout_constraintEnd_toStartOf="@+id/btnIgual"
        app:layout_constraintTop_toBottomOf="@+id/btnTres" />

</androidx.constraintlayout.widget.ConstraintLayout>